--- a/analysis/Initial_analysis.Rmd
+++ b/analysis/Initial_analysis.Rmd
@@ -89,7 +89,7 @@ lavmodel_int <- "
 
 moderator_grid <- unique(data$inclusiejaar) %>% as.numeric()
 moderator_grid2 <- c(1995,2000,2005,2010,2015)
-
+moderator_grid3 <- 1995:2015
 bandwidths <- c(2,5,10,15)
 
 
@@ -114,72 +114,6 @@ hildebrandt_bw
 bandwidths <- c(bandwidths, hildebrandt_bw)
 
 ```
-
-### measurement invariance in with loglik'
-mag niet want allemaal dependetn 
-
-```{r}
-
-full_model <- sirt::lsem.estimate(
-  data_base,
-  moderator = "inclusiejaar",
-  moderator.grid = moderator_grid,
-  lavmodel = lavmodel_int,
-  h = 2 ,
-  fit_measures = c("aic", "df", "chisq", "logl"),
-  est_joint  = TRUE,
-  par_invariant = c("F=~ESR_conv")
-)
-
-summary(full_model)
-
-metricinvariant_model <- sirt::lsem.estimate(
-  data_base,
-  moderator = "inclusiejaar",
-  moderator.grid = moderator_grid,
-  lavmodel = lavmodel_int,
-  h = 2 ,
-  fit_measures = c("aic", "df", "chisq", "logl"),
-  est_joint  = TRUE,
-  par_invariant = c("F=~GH_conv", "F=~TJC_conv","F=~SJC_conv")
-) 
-
-summary(metricinvariant_model)
-
-
-scalarinvariant_model <- sirt::lsem.estimate(
-  data_base,
-  moderator = "inclusiejaar",
-  moderator.grid = moderator_grid,
-  lavmodel = lavmodel_int,
-  h = 2 ,
-  fit_measures = c("aic", "df", "chisq", "logl"),
-  est_joint  = TRUE,
-  par_invariant = c("F=~GH_conv", "F=~TJC_conv","F=~SJC_conv",
-                    "ESR_conv~1", "SJC_conv~1", "TJC_conv~1", "GH_conv~1")
-) 
-
-df_metric_invar <- metricinvariant_model$fitstats_joint["df","value"] - 
-  full_model$fitstats_joint["df","value"]
-
-teststat_metric_invar <-
-  -2*(metricinvariant_model$fitstats_joint["logl","value"] - 
-        full_model$fitstats_joint["logl","value"] 
-) 
-
-df_scalar_invar <- scalarinvariant_model$fitstats_joint["df","value"] - 
-  metricinvariant_model$fitstats_joint["df","value"]
-
-teststat_scalar_invar <-
-  -2*(scalarinvariant_model$fitstats_joint["logl","value"] - 
-        metricinvariant_model$fitstats_joint["logl","value"] 
-) 
-
-pchisq(teststat_metric_invar,df=df_metric_invar,lower.tail=FALSE)
-pchisq(teststat_scalar_invar,df=df_scalar_invar,lower.tail=FALSE)
-
-```
-
 
 
 ### permuation test model 
@@ -237,10 +171,31 @@ Lower AIC is better
 test_bandwidths(
   data = data_base,
   lavmodel = lavmodel_int,
-  bandwidthvector = bandwidths[bandwidths > 3],
+  bandwidthvector = bandwidths,
   moderator_name = "inclusiejaar",
-  moderator_grid = c(1995,2000,2005,2010,2015),
+  moderator_grid = moderator_grid,
+  statistic = "AIC"
 )
+
+
+test_bandwidths(
+  data = data_base,
+  lavmodel = lavmodel_int,
+  bandwidthvector = bandwidths,
+  moderator_name = "inclusiejaar",
+  moderator_grid = moderator_grid2,
+  statistic = "AIC"
+)
+
+test_bandwidths(
+  data = data_base,
+  lavmodel = lavmodel_int,
+  bandwidthvector = bandwidths,
+  moderator_name = "inclusiejaar",
+  moderator_grid = moderator_grid3,
+  statistic = "AIC"
+)
+
 
 
 
@@ -256,13 +211,33 @@ So lower negative number
 test_bandwidths(
   data = data_base,
   lavmodel = lavmodel_int,
-  bandwidthvector = bandwidths[bandwidths > 3],
+  bandwidthvector = bandwidths,
   moderator_name = "inclusiejaar",
-  moderator_grid = c(1995,2000,2005,2010,2015),
+  moderator_grid = moderator_grid,
+  statistic = "CV",
+  silent = TRUE,
+  K = 2
+)
+
+test_bandwidths(
+  data = data_base,
+  lavmodel = lavmodel_int,
+  bandwidthvector = bandwidths,
+  moderator_name = "inclusiejaar",
+  moderator_grid = moderator_grid2,
   statistic = "CV",
   silent = TRUE
 )
 
+test_bandwidths(
+  data = data_base,
+  lavmodel = lavmodel_int,
+  bandwidthvector = bandwidths,
+  moderator_name = "inclusiejaar",
+  moderator_grid = moderator_grid3,
+  statistic = "CV",
+  silent = TRUE
+)
 
 ```
 
