--- a/analysis/Initial_analysis_v3.Rmd
+++ b/analysis/Initial_analysis_v3.Rmd
@@ -41,9 +41,6 @@ starting_time <- proc.time()
 ```{r}
 load("I:/Pi helm/Promovendi/Xanthe/4. Analyse hele EAC/EAC-nieuwe-start/0. Data/Produced/Beforeimp 2019-01-16.RData")
 
-load("I:/Pi helm/Promovendi/Xanthe/4. Analyse hele EAC/EAC-nieuwe-start/0. Data/Produced/Naimp 2019-01-16.RData")
-
-fulldata <- mice::complete(data_imp, include = T, action = 'long')
 ```
 ### ab_count
 ```{r}
@@ -122,20 +119,6 @@ fulldata <- filter(fulldata, !is.na(inclusiejaar) & .imp != 0)
 # baseline
 
 fulldata_base <- fulldata %>% filter(BEZNR ==1)
-
-# antibodies 
-
-fulldata_pos <- fulldata %>% subset(EACNUMM %in% EACNUMMs_ab_pos)
-
-fulldata_neg <- fulldata %>% subset(EACNUMM %in% EACNUMMs_ab_neg)
-
-# first set 
-fulldata1 <- fulldata %>% filter(BEZNR ==1 & .imp == 1)
-
-fulldata_pos1 <- fulldata1 %>% subset(EACNUMM %in% EACNUMMs_ab_pos)
-
-fulldata_neg1 <- fulldata1 %>% subset(EACNUMM %in% EACNUMMs_ab_neg)
-
 
 
 ```
@@ -264,10 +247,6 @@ write_table1(
   nonnormalVars = nonnormalVars, name = "All"
 )
 
-write_table1(
-  data = fulldata1, myVars = myVars, catVars = catVars,
-  nonnormalVars = nonnormalVars, name = "All"
-)
 
 
 write_table1(
@@ -277,26 +256,7 @@ write_table1(
   stratum = "inclusiejaar", name = "inclusiejaar"
 )
 
-write_table1(
-  data = mutate(fulldata1, inclusiejaar = cut(inclusiejaar,5)),
-  myVars = myVars, catVars = catVars,
-  nonnormalVars = nonnormalVars,
-  stratum = "inclusiejaar", name = "inclusiejaar"
-)
 
-write_table1(
-  data = mutate(data_base,ab_pos = EACNUMM %in% EACNUMMs_ab_pos) , 
-  myVars = myVars, catVars = catVars,
-  nonnormalVars = nonnormalVars,
-  stratum = "ab_pos", name = "ab_pos"
-)
-
-write_table1(
-  data = mutate(fulldata1,ab_pos = EACNUMM %in% EACNUMMs_ab_pos) , 
-  myVars = myVars, catVars = catVars,
-  nonnormalVars = nonnormalVars,
-  stratum = "ab_pos", name = "ab_pos"
-)
 ```
 
 ### other baseline
@@ -342,24 +302,12 @@ calculate_bandwidth <- function(n, sd, h){
 # these would be the bandwidths based on the bandwidht factors in hilderbrandt et al
 hildebrandt_bw <- calculate_bandwidth(n = nrow(data_base), 
                     sd = sd(data_base$inclusiejaar), 
-                    h = c(1.1,2,3))
+                    h = c(10:30)/10)
 
 hildebrandt_bw
 
-bandwidths_base <- c(bandwidths, hildebrandt_bw)
 
 
-# die van fulldata zijn hetzelfde 
-
-calculate_bandwidth(n = nrow(fulldata %>% subset(BEZNR == 4 & .imp == 1)),
-                    sd = sd(data_base$inclusiejaar), 
-                    h = c(1.1,2,3))
-
-
-
-calculate_bandwidth(n = nrow(fulldata %>% subset(BEZNR == 9 & .imp == 1)),
-                    sd = sd(data_base$inclusiejaar), 
-                    h = c(1.1,2,3))
 
 
 
@@ -367,6 +315,18 @@ calculate_bandwidth(n = nrow(fulldata %>% subset(BEZNR == 9 & .imp == 1)),
 
 ### load bandwidths
 ```{r}
+deviances_base <- test_bandwidths(
+  data = data_base,
+  lavmodel = lavmodel_int,
+  bandwidthvector =   hildebrandt_bw,
+  moderator_name = "inclusiejaar",
+  moderator_grid = moderator_grid,
+  K = 5,
+  statistic = "CV",
+  silent = T
+)
+
+
 
 ```
 
